--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,8 +9,10 @@
     </span>
 
     <span *ngIf="isConnect; else elseBlock">
-      <mat-icon class="account_icon" matSuffix>account_circle</mat-icon>
-      <mat-icon class="account_icon" matSuffix>expand_more</mat-icon>
+      <a title="Se déconnecter" (click)="router.navigate(['/profil'])"><mat-icon class="account_icon" matSuffix>account_circle</mat-icon></a>
+    </span>
+    <span *ngIf="isConnect">
+      <a class="header-sign" title="Se déconnecter" (click)="router.navigate(['/disconnect'])"><mat-icon class="logout" matSuffix>logout</mat-icon></a>
     </span>
     <ng-template #elseBlock>
       <a class="header-sign" (click)="router.navigate(['/login'])">Connexion</a>
