--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -10,7 +10,7 @@
   <ng-template #cardNotDisplay>
     <span class="span-content-card div-content-back" (click)="handleClick()">
       <div class="div-content-card" >
-        <img  class="deck-example-logo"  src="{{ 'http://localhost:3000/' + listDeckCardsService.deck.image}}">
+        <img  class="deck-example-logo"  src="{{ 'http://localhost:3000/' + playSoloService.deck.image}}">
       </div>
     </span>
   </ng-template>
