refacto view for the creation of a part

--- a/src/app/components/create-part/create-part.component.html
+++ b/src/app/components/create-part/create-part.component.html
@@ -3,26 +3,27 @@
 <div class="create-part-content">
   <h1>Vous avez créer une partie</h1>
   <p class="create-part-content">
-    Vous pouvez choisir d'envoyez l'URL ci-dessous à l'autre personne ou de générer un mot de passe qu'elle pourra rentré
-    elle même dans la partie rejoindre partie
+    {{informationSentence}}
   </p>
   <h2>URL</h2>
   <a class="link-create" (click)="router.navigate([playDuoService.room &&  playDuoService.room.token ? '/play/duo/' + playDuoService.room.token: ''])">http://localhost:4200/play/duo/{{playDuoService.room?.token }}</a>
-  <h2>Mot de passe custom</h2>
-  {{playDuoService.room &&  playDuoService.room.keyword ?  playDuoService.room.keyword: 'Vous n\'en avez pas pour l\'instant'}}
-  <h3>Formulaire de création de mot de passe Custom</h3>
-  <form id="form-keyword" [formGroup]="createKeyWordForm" (ngSubmit)="postKeyWordForm()">
+  <ng-container *ngIf="localStorageService.getSessionToken()">
+    <h2>Mot de passe custom</h2>
+    {{playDuoService.room &&  playDuoService.room.keyword ?  playDuoService.room.keyword: 'Vous n\'en avez pas pour l\'instant'}}
+    <h3>Formulaire de création de mot de passe Custom</h3>
+    <form id="form-keyword" [formGroup]="createKeyWordForm" (ngSubmit)="postKeyWordForm()">
 
-    <span id="inputs_form">
-        <mat-form-field class="example-form-field">
-          <mat-label>Mot de passe custom</mat-label>
-          <input matInput type="text" name="keyWord" id="keyWord" formControlName="keyWord" required>
-        </mat-form-field>
-    </span>
+      <span id="inputs_form">
+          <mat-form-field class="example-form-field">
+            <mat-label>Mot de passe custom</mat-label>
+            <input matInput type="text" name="keyWord" id="keyWord" formControlName="keyWord" required>
+          </mat-form-field>
+      </span>
 
-    <span id="button-validation">
-        <button id="button_connect" [ngClass]="{'button_connect_active': !createKeyWordForm.invalid && !playDuoService.buttonCreatePart}" mat-raised-button [disabled]="createKeyWordForm.invalid || playDuoService.buttonCreatePart">Créer</button>
-    </span>
+      <span id="button-validation">
+          <button id="button_connect" [ngClass]="{'button_connect_active': !createKeyWordForm.invalid && !playDuoService.buttonCreatePart}" mat-raised-button [disabled]="createKeyWordForm.invalid || playDuoService.buttonCreatePart">Créer</button>
+      </span>
 
-  </form>
+    </form>
+  </ng-container>
 </div>
