--- a/src/app/components/profil/profil.component.html
+++ b/src/app/components/profil/profil.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <span id="profil_content">
     <h3>Changer votre mot de passe</h3>
-    <form id="form-change-password" [formGroup]="subscribeForm" (ngSubmit)="postSubscribeForm()">
+    <form id="form-change-password" [formGroup]="changePasswordForm" (ngSubmit)="postChangePasswordForm()">
       <mat-form-field class="example-form-field">
         <mat-label>Ancien mot de passe</mat-label>
         <input matInput [type]="hidePasswordVisibility ? 'password': 'text'" name="oldPassword" id="oldPassword" formControlName="oldPassword" required>
@@ -20,7 +20,7 @@
       </mat-form-field>
 
       <span id="button-validation">
-          <button id="button_change_password" [ngClass]="{'button_subscribe_active': !subscribeForm.invalid && !buttonIsInValidAfterClick}" mat-raised-button [disabled]="subscribeForm.invalid || buttonIsInValidAfterClick">Changer de mot de passe</button>
+          <button id="button_change_password" [ngClass]="{'button_subscribe_active': !changePasswordForm.invalid && !buttonIsInValidAfterClick}" mat-raised-button [disabled]="changePasswordForm.invalid || buttonIsInValidAfterClick">Changer de mot de passe</button>
       </span>
     </form>
 </span>
