--- a/src/app/components/banner-play-duo/banner-play-duo.component.html
+++ b/src/app/components/banner-play-duo/banner-play-duo.component.html
@@ -6,10 +6,10 @@
   <div id="banner-time-logo">
     <div class="banner-play-timer">
       <h1 *ngIf="socketService.socket && playDuoService.idUserWhoPlay; else elseBlock">
-        {{socketService.socket.id == playDuoService.idUserWhoPlay ? 'A vous de jouer': 'A votre adverssaire de jouer'}}
+        {{socketService.socket.id == playDuoService.idUserWhoPlay ? 'A vous de jouer': 'A votre adversaire de jouer'}}
       </h1>
       <ng-template #elseBlock>
-        les deux jouers doivent-être connecté pour connaître le nom du premier
+        les deux joueurs doivent-être connecté pour connaître le nom du premier
       </ng-template>
       {{lastRecord}}
     </div>
