--- a/src/app/components/card-duo/card-duo.component.css
+++ b/src/app/components/card-duo/card-duo.component.css
@@ -38,11 +38,18 @@
   margin: auto;
   display: flex;
   max-height: 100%;
-  max-width: 100%;
+  max-width: 60%;
   overflow: scroll;
+  font-size: 1vmax;
   /*backface-visibility: hidden;*/
 }
 
 .div-content-back {
   cursor: pointer;
+}
+
+@media (max-width: 1050px) {
+  .div-content-card {
+    max-width: 80%;
+  }
 }
