--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -38,8 +38,9 @@
   margin: auto;
   display: flex;
   max-height: 100%;
-  max-width: 100%;
+  max-width: 80%;
   overflow: scroll;
+  font-size: 1vmax;
   /*backface-visibility: hidden;*/
 }
 
