Work in progress for deck editor

--- a/src/app/components/admin/deck-editor/deck-editor.component.css
+++ b/src/app/components/admin/deck-editor/deck-editor.component.css
@@ -49,13 +49,20 @@
 }
 
 .card-content {
-  width: 100%;
   height: 100%;
   border-radius: 5px;
   background-color: #4572A0;
 }
 
+.card-content img {
+  height: 100%;
+}
+
 .delete-pair {
   color: #ff0000;
   cursor: pointer;
+  border-color: transparent;
+  box-shadow: 0 0 0 4px #ff0000;
+  border-radius: 5px;
+  height: 100%;
 }
