add link to scrap picture in admin page

--- a/src/app/components/admin/deck-tab/admin-decks-tab.component.css
+++ b/src/app/components/admin/deck-tab/admin-decks-tab.component.css
@@ -17,8 +17,20 @@
 }
 .grid-header {
   color: white;
-  background-color: red;
+  background-color: #F73C3B;;
 }
 a {
   cursor: pointer;
+}
+
+#link-scrap-picture {
+  font-size: 1.1em;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-family: "Chewy", Arial,Helvetica, sans-serif;
+}
+#link-scrap-picture a{
+  color: #F73C3B;
+  text-decoration: none;
 }
