Delete "Ajouter un deck" button

--- a/src/app/components/admin/deck-tab/admin-decks-tab.component.html
+++ b/src/app/components/admin/deck-tab/admin-decks-tab.component.html
@@ -12,7 +12,7 @@
     <span class="grid-header"></span>
     <span *ngFor="let deck of listDeckService.decks"><a (click)="handleDeckClick(deck.id)" style="text-decoration: underline">Éditer</a></span>
 
-    <span class="grid-header"><a style="text-decoration: underline">Ajouter un deck</a></span>
+    <span class="grid-header"><a style="text-decoration: underline"></a></span>
     <span *ngFor="let deck of listDeckService.decks"><a (click)="deleteDeck(deck.id)" style="color: red; text-decoration: underline">Supprimer</a></span>
   </div>
 </div>
